--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   equatable: ^2.0.5
   get_it: ^7.2.0
   injectable: ^1.5.3
+  connectivity_plus: ^6.0.3
 
 dev_dependencies:
   flutter_test:
